// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [0, 0, 0] 1`] = `
<div>
  No applicable advisories
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [0, 5, 3] 1`] = `
<div>
  <Tooltip
    content="Security advisories"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <SecurityIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        3
      </FlexItem>
    </Flex>
  </Tooltip>
  <Tooltip
    content="Bug fixes"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <BugIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        5
      </FlexItem>
    </Flex>
  </Tooltip>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 0, 3] 1`] = `
<div>
  <Tooltip
    content="Security advisories"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <SecurityIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        3
      </FlexItem>
    </Flex>
  </Tooltip>
  <Tooltip
    content="Enhancements"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <EnhancementIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        1
      </FlexItem>
    </Flex>
  </Tooltip>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 2, 0] 1`] = `
<div>
  <Tooltip
    content="Bug fixes"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <BugIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        2
      </FlexItem>
    </Flex>
  </Tooltip>
  <Tooltip
    content="Enhancements"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <EnhancementIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        1
      </FlexItem>
    </Flex>
  </Tooltip>
</div>
`;

exports[`Helpers tests createAdvisoriesIcons: Should match advisory icons snapshot for [1, 2, 3] 1`] = `
<div>
  <Tooltip
    content="Security advisories"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <SecurityIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        3
      </FlexItem>
    </Flex>
  </Tooltip>
  <Tooltip
    content="Bug fixes"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <BugIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        2
      </FlexItem>
    </Flex>
  </Tooltip>
  <Tooltip
    content="Enhancements"
  >
    <Flex
      flex={
        Object {
          "default": "inlineFlex",
        }
      }
    >
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        <EnhancementIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </FlexItem>
      <FlexItem
        spacer={
          Object {
            "default": "spacerSm",
          }
        }
      >
        1
      </FlexItem>
    </Flex>
  </Tooltip>
</div>
`;
